--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ button:focus{
     font-size: 18px;
     padding-top: 4rem;
     text-align: left;
-    font-family: montserrat;
+    font-family: "MontserratSemiBold";
     font-weight: 500;
 }
 .feature .projects_wraper h2 {
