--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ button:focus{
 .feature{
     width: 100%;
     background-color: #fff;
-    padding: 80px 0px;
+    padding: 50px 0px;
 }
 .feature_inner{
     padding: 0px 25px;
@@ -548,9 +548,9 @@ button:focus{
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
-    -webkit-column-gap: 6rem;
-    -moz-column-gap: 6rem;
-    column-gap: 6rem;
+    -webkit-column-gap: 8rem;
+    -moz-column-gap: 8rem;
+    column-gap: 8rem;
     orphans: 1;
     widows: 1;
   }
@@ -567,8 +567,8 @@ button:focus{
     width: calc(100% + 20px);
     -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
     transition: opacity 0.35s, transform 0.35s;
-    -webkit-transform: translate3d(-3px,0,0);
-    transform: translate3d(-3px,0,0);
+    -webkit-transform: translate3d(0,+5px,0);
+    transform: translate3d(0,+5px,0);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
   }
