--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ h1,h2,h3,h4,h5,h6,p{
     padding: 0;
 }
 
+
+
 .noleft{
     padding-left: 0;
 }
@@ -172,7 +174,7 @@ button:focus{
 .banner{
     width: 100%;
     background-color: #000;
-    padding-top: 175px;
+    padding-top: 250px;
 }
 .banner_detail{
     height: 600px;
@@ -235,8 +237,8 @@ button:focus{
 
 .feature{
     width: 100%;
-    background-color: #fff;
-    padding: 50px 0px;
+    background-color: #000;
+    padding: 150px 0px;
 }
 .feature_inner{
     padding: 0px 25px;
@@ -341,7 +343,7 @@ button:focus{
 .f_social p{
     font-family: "MontserratLight";
     font-size: 12px;
-    color: #a9a9a9;
+    color: #fff;
     width: max-content;
     display: inline-block;
     margin-right: 35px;
@@ -527,11 +529,12 @@ button:focus{
     text-align: left;
     font-family: "MontserratSemiBold";
     font-weight: 500;
+    color:#fff;
 }
 .card h1 {
   font-family: "MontserratRegular";
     font-size: 36px;
-    color: #000;
+    color: #fff;
 }
 .feature .projects_wraper h2 {
     font-size: 16px;
