--- a/css/style.css
+++ b/css/style.css
@@ -184,9 +184,11 @@ button:focus{
     position: relative;
 }
 .fbox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  margin-bottom: -210px;
+  margin-top: 120px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
 .details_res .banner_heading h1{
     margin-bottom: 0px;
