--- a/css/style.css
+++ b/css/style.css
@@ -184,12 +184,9 @@ button:focus{
     position: relative;
 }
 .fbox{
-
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  margin-bottom: -210px;
-  margin-top: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .details_res .banner_heading h1{
     margin-bottom: 0px;
